--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,12 @@ spring.application.name=todo
 
 
 
-server.port=9090
+server.port=7070
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tododb
-spring.datasource.username=root
-spring.datasource.password=12345
+# IN LOCAL DEVELOPMENT
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/tododb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:12345}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
